# scraping_nutrinfo

./: .gitignore  BASE DE DATOS GALLETITAS CON GLUTEN (1).xlsx  clean_nutrition.py  debug_modal_0.html  debug_modal_1.html  debug_modal_10.html  debug_modal_100.html  debug_modal_101.html  debug_modal_102.html  debug_modal_103.html  debug_modal_104.html  debug_modal_105.html  debug_modal_106.html  debug_modal_107.html  debug_modal_108.html  debug_modal_109.html  debug_modal_11.html  debug_modal_110.html  debug_modal_111.html  debug_modal_112.html  debug_modal_113.html  debug_modal_114.html  debug_modal_115.html  debug_modal_116.html  debug_modal_117.html  debug_modal_118.html  debug_modal_119.html  debug_modal_12.html  debug_modal_120.html  debug_modal_121.html  debug_modal_122.html  debug_modal_123.html  debug_modal_124.html  debug_modal_125.html  debug_modal_126.html  debug_modal_127.html  debug_modal_128.html  debug_modal_129.html  debug_modal_13.html  debug_modal_130.html  (+407 more)
